fix scrollbar

--- a/style.css
+++ b/style.css
@@ -49,8 +49,6 @@ html {
 }
 
 body {
-    overscroll-behavior: none;
-
     font-family: "Courier New", Courier, monospace;
     margin: 0 auto;
     width: 70%;
